fix: Add z-index to put PubEdgeListingControls above edge contents

--- a/client/components/PubEdgeListing/pubEdgeListingCard.scss
+++ b/client/components/PubEdgeListing/pubEdgeListingCard.scss
@@ -42,6 +42,7 @@
 		align-items: center;
 		display: flex;
 		right: 24px;
+		z-index: 1;
 	}
 
 	> .relation {
